With Uncommented code that runs Additional Example flows

--- a/spring/spring-boot/parammappings/src/main/resources/templates/namaste.html
+++ b/spring/spring-boot/parammappings/src/main/resources/templates/namaste.html
@@ -14,8 +14,8 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="book : ${payLoad}">
-				<td><span th:text="${book}"> Author </span></td>
+			<tr th:each="lecture : ${payLoad}">
+				<td><span th:text="${lecture}"> Author </span></td>
 			</tr>
 		</tbody>
 	</table>
