--- a/spring/spring-boot/parammappings/src/main/resources/templates/greeting.html
+++ b/spring/spring-boot/parammappings/src/main/resources/templates/greeting.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="'Namaste ,  ' + ${name} + '!'" />
+    <p th:text="'Hello ,  ' + ${name} + '!'" />
 </body>
 </html>
